--- a/index.html
+++ b/index.html
@@ -97,10 +97,9 @@
     <section id="about" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-                <h2>About Grayscale</h2>
-                <p>Grayscale is a free Bootstrap 3 theme created by Start Bootstrap. It can be yours right now, simply download the template on <a href="http://startbootstrap.com/template-overviews/grayscale/">the preview page</a>. The theme is open source, and you can use it for any purpose, personal or commercial.</p>
-                <p>This theme features stock photos by <a href="http://gratisography.com/">Gratisography</a> along with a custom Google Maps skin courtesy of <a href="http://snazzymaps.com/">Snazzy Maps</a>.</p>
-                <p>Grayscale includes full HTML, CSS, and custom JavaScript files along with LESS files for easy customization.</p>
+                <h2>О нас</h2>
+                <p>АльтерШкола - это новый проект в твоем городе. Это команда людей, которые хотят по настоящему развития города и молодежи.</p>
+                <p>Основная идея нашего проекта - развиваться с удовольствием. Мы против современной системы образования, мы против скучных тренингов переведенных с других языков не подходящих под наш социум, мы против некомпетентных лекторов на частных курса и в вузах города. Мы создаем такие условия, что вам не нужно будет заставлять себя идти учить что-то или развивать себя через силу и сидеть на лекция "потому что мне это надо".</p>
             </div>
         </div>
     </section>
@@ -109,10 +108,15 @@
     <section id="departments" class="content-section text-center">
         <div class="departments-section">
             <div class="container">
-                <div class="col-lg-8 col-lg-offset-2">
+                <div class="col-lg-8 col-lg-offset-2 departments-big-container">
                     <h2>Направления</h2>
-                    <p>You can download Grayscale for free on the preview page at Start Bootstrap.</p>
-                    <a href="http://startbootstrap.com/template-overviews/grayscale/" class="btn btn-default btn-lg">Visit Download Page</a>
+                    <p>Здесь будет список направлений, возможно с картинками, и ссылки на страницы с подробной инфой про эти направления. Фон не могу придумать для направлений</p>
+                    <p>
+                        <a href="#" class="btn btn-default btn-lg btn-href">Основы живописи</a>
+                        <a href="#" class="btn btn-default btn-lg btn-href">Китайский язык</a>
+                        <a href="#" class="btn btn-default btn-lg btn-href">Чайная церемония</a>
+                        <a href="#" class="btn btn-default btn-lg btn-href">Еще какой то курс</a>
+                    </p>
                 </div>
             </div>
         </div>
@@ -124,8 +128,12 @@
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
                     <h2>Курсы актерского мастерства</h2>
-                    <p>You can download Grayscale for free on the preview page at Start Bootstrap.</p>
-                    <a href="http://startbootstrap.com/template-overviews/grayscale/" class="btn btn-default btn-lg">Visit Download Page</a>
+                    <img src="img/acting_classes/3.jpg" class="acting-classes-img-left">
+                    <p>Так как ты просил о них по-подробнее, я сделала страницу здесь на главной лэндинг пэйдж о них. Здесь инфа с фотками с курсов.</p>
+                    <img src="img/acting_classes/2.jpg" class="acting-classes-img-right">
+                    <p>Для кого:
+                    Для тех, кому это необходимо по настоящему, кто давно хотел попробовать, но все время лишал себя возможности, каждый раз боялся выйти за рамки, для всех тех, кто хочет увидеть мир по другому.</p>
+                    <a href="#" class="btn btn-default btn-lg btn-href">Связаться с организатором</a>
                 </div>
             </div>
         </div>
@@ -136,18 +144,20 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Контакты</h2>
-                <p>Feel free to email us to provide some feedback on our templates, give us suggestions for new templates and themes, or to just say hello!</p>
-                <p><a href="mailto:feedback@startbootstrap.com">feedback@startbootstrap.com</a>
+                <p>Наши организаторы и преподаватели с радостью ответят на любые ваши вопросы! Пишите нам на почту, Вконтаке, Facebook или свяжитесь по телефону.</p>
+                <p><a href="mailto:feedback@startbootstrap.com">alterschool@gmail.com</a>
+                </p>
+                <p>
+                    Life: 093 111 222 33
+                    <br/>
+                    MTC: 068 222 333 00
                 </p>
                 <ul class="list-inline banner-social-buttons">
                     <li>
-                        <a href="https://twitter.com/SBootstrap" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
+                        <a href="https://twitter.com/SBootstrap" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Вконтакте</span></a>
                     </li>
                     <li>
-                        <a href="https://github.com/IronSummitMedia/startbootstrap" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
-                    </li>
-                    <li>
-                        <a href="https://plus.google.com/+Startbootstrap/posts" class="btn btn-default btn-lg"><i class="fa fa-google-plus fa-fw"></i> <span class="network-name">Google+</span></a>
+                        <a href="https://github.com/IronSummitMedia/startbootstrap" class="btn btn-default btn-lg"><i class="fa fa-facebook fa-fw"></i> <span class="network-name">Facebook</span></a>
                     </li>
                 </ul>
             </div>
